--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -13,6 +13,7 @@
 
 /*ventana de slide*/
 .slider-content {
+	margin-top: 70px;
 	position: relative;		
 	width: 100%;
 }
@@ -146,30 +147,14 @@ font-weight: 700;
 	width: 8px;
 	height: 8px;
 	margin-right: 4px;
-	background-color: rgba(0,0,0, 0.3);
-	/*box-shadow: 0 0 5px 0px rgba(0,0,0,0.9);*/
+	background-color: hsl(210, 40%, 69%);
 	border-radius: 50%;
 	transition:all 0.3s;
 }
 
 .dot:last-child {margin-right: 0;}
-.dot:hover {background-color: #fff;}
-.dot--active {background-color: rgba(255,255,255, 0.5);}
+.dot--active {background-color: #004D9A;}
 
-/* Buttons */
-button {
-	cursor: pointer;
-	margin-right: 8px;
-	border:none;
-	border-radius: 4px;
-	padding:10px;
-	background-color: #3066BE;
-	color:#FFF;
-	transition: all 0.5s;
-}
-button:last-child {margin-right: 0;}
-button:hover {background-color: #60AFFF;}
-button:focus {outline: none;}
 
 /* Mods */
 .disabled {
