--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /* GLOBAL */
 *::selection{
-    background-color: hsl(205, 55%, 70%);
+    background-color: hsla(205, 56%, 70%, 0.5);
 }
 *{
     box-sizing: border-box;
@@ -163,7 +163,8 @@ main{
 
 
     height: 100vh;
-    background-color: #E2E6F1;
+    background-image: url('../img/Fondo-BUNKER.png');
+    background-size: cover;
 }
 
 .main__container{
@@ -176,11 +177,13 @@ main{
 .main__container > *{
     margin-bottom: 3rem;
 
-    color: slateblue;
+    color: white;
 }
 
 .main__title{
     font-size: 2.5rem;
+
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 /* MAIN COVER ANIMATED */
@@ -247,10 +250,16 @@ main{
 /* END MAIN COVER ANIMATED */
 .main__subtitle{
     font-size: 2rem;
+
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .main__text{
-    width: 70%;
+    width: 85%;
+
+    line-height: 1.5;
+
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 
 .main__buttons{
@@ -264,16 +273,17 @@ main{
 .main__btn{
     display: flex;
 
-    border: 2px solid slateblue;
+    border: 2px solid white;
     border-radius: 20px;
     width: 150px;
     height: 75px;
-    margin: 0 3rem;
+    margin-right:3rem;
 
     background-color: transparent;
-    color: slateblue;
+    color: white;
 
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5),
+                inset 1px 1px 2px rgba(0, 0, 0, 0.5);
     transition: transform .2s ease, box-shadow .2s ease;
 }
 
@@ -293,7 +303,8 @@ main{
     
 }
 .main__btn:active{
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5),
+                inset 2px 2px 5px rgba(0, 0, 0, 0.5);
     transform: translate(1px, 1px);
 }
 
