--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,8 +127,7 @@ body{
 
     cursor: pointer;
 
-    transition: color .2s linear;
-    
+    transition: color .2s linear;  
 }
 .header__item:not(.selected):hover{
     color:#A9BCCF;
@@ -161,7 +160,6 @@ main{
     display: flex;
     flex-direction: column;
 
-
     height: 100vh;
     background-image: url('../img/Fondo-BUNKER.png');
     background-size: cover;
@@ -169,9 +167,11 @@ main{
 
 .main__container{
     width: 60%;
-    align-self: flex-end;
 
-    margin-top: 15%;
+    margin: auto 0 auto 40%;
+    
+
+
 }
 
 .main__container > *{
@@ -182,7 +182,6 @@ main{
 
 .main__title{
     font-size: 2.5rem;
-
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
@@ -323,7 +322,7 @@ main{
     background-color: hsl(205, 55%, 70%);;
 }
 .label__title{
-    margin-top: 20px;
+    align-self: center;
     color: white;
     font-size: 3rem;
     text-transform: uppercase;
@@ -492,24 +491,29 @@ main{
 /* FOOTER BLOCK ANIMATED */
 .footer__block_1{
     transform: translateY(500px);
-    transition: transform .5s ease;
+    transition: transform 1s ease;
 }
 .footer__block_2{
     transform: translateY(500px);
-    transition: transform .5s ease;
+    transition: transform 1s ease;
+    transition-delay: .1s;
 }
 
 .footer__block_3{
     transform: translateY(500px);
-    transition: transform .5s ease;
+    transition: transform 1s ease;
+    transition-delay: .2s;
 }
 
 .footer__block_4{
     transform: translateY(500px);
-    transition: transform .5s ease;
+    
+    transition: transform 1s ease;
+    transition-delay: .3s;
 }
 .footer__block_1-animated{
     transform: translateY(0);
+    
 }
 .footer__block_2-animated{
     transform: translateY(0);
