--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,14 +163,20 @@ main{
     height: 100vh;
     background-image: url('../img/Fondo-BUNKER.png');
     background-size: cover;
+
+    position: relative;
+}
+
+#canvas{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
 }
 
 .main__container{
     width: 60%;
 
     margin: auto 0 auto 40%;
-    
-
 
 }
 
