--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ a:hover{
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: hsl(210, 100%, 25%);
+  background-color: rgb(17, 83, 150);
 
   border-radius: 10px;
 
@@ -85,6 +85,11 @@ body{
     font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
 
+.page{
+    min-height: 100%;
+    position: relative;
+}
+
 
 /*
 *--- LANGUAGE
@@ -93,7 +98,7 @@ body{
 .page__header{
     position: fixed;
     right: 30px;
-    top: 30px;
+    top: 50px;
     z-index: 1000;
 
     background-color: #003870;
@@ -102,6 +107,20 @@ body{
     border-radius: 20px;
 
     box-shadow: 1px 1px 3px rgba(29, 63, 97, .5);
+}
+
+.header__title{
+    position: absolute;
+    top: -25px;
+    left: 15px;
+    color: azure;
+    font-size: 1rem;
+
+    display: block;
+    margin: 0 auto;
+
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, .5);
+    background-color: transparent;
 }
 
 .header__language{
@@ -130,7 +149,7 @@ body{
     transition: color .2s linear;  
 }
 .header__item:not(.selected):hover{
-    color:#A9BCCF;
+    color:rgb(169, 188, 207);
 }
 
 .header__item:after {
@@ -171,6 +190,7 @@ main{
     position: absolute;
     width: 100%;
     height: 100vh;
+
 }
 
 .main__container{
@@ -272,7 +292,7 @@ main{
     align-self: flex-end;
     display: flex;  
 }
-.main__btn.btn__secondary{
+.main__btn{
     transform: scale(.9);
 }
 .main__btn{
