--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 }
 a{
     text-decoration: none;
-    color: aqua;
+    color: hsl(210, 100%, 70%);
 }
 a:hover{
     text-decoration: underline;
@@ -60,7 +60,7 @@ a:hover{
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 1px 1px 6px hsl(0, 0%, 100%);
     box-shadow: inset 1px 1px 6px hsl(0, 0%, 100%);
-    background: #73ACE6; 
+    background: hsl(210, 100%, 70%); 
 
     border-radius: 10px;
 }
@@ -206,9 +206,15 @@ main{
     color: white;
 }
 
+.main__logo{
+    width: 250px;
+}
 .main__title{
     font-size: 2.5rem;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+p.main__text[key="cover__text-1"]{
+    margin-bottom: 1rem;
 }
 
 /* MAIN COVER ANIMATED */
@@ -287,6 +293,7 @@ main{
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 
+
 .main__buttons{
     width: 60%;
     align-self: flex-end;
@@ -345,7 +352,7 @@ main{
     display: flex;
     justify-content: center;
 
-    background-color: hsl(205, 55%, 70%);;
+    background-color:  hsl(210, 100%, 30%);
 }
 .label__title{
     align-self: center;
@@ -560,6 +567,7 @@ main{
 
 .footer__logo{
     margin-top: 50px;
+    width: 100%;
 }
 .footer__title{
     margin-top: 50px;
