--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -515,6 +515,7 @@ p.main__text[key="cover__text-1"]{
 .footer__block{
     width: 10rem;
 
+    padding: 3rem 0;
     margin: 0 30px;
     text-align: left;
 
@@ -581,108 +582,15 @@ p.main__text[key="cover__text-1"]{
 .footer__item{
     padding: 5% 0;
 }
-.footer__input{
-    margin: 5% 0;
-    border: 0;
-    background-color: transparent;
-    padding: 5%;
-    border-bottom: 2px solid white;
-    outline: transparent;
 
-    color: white;
-}
-.footer__input:focus{
-
-    border-bottom: 2px solid wheat;
-
-    color: white;
-}
 .footer__block:last-child{
     width: 15rem;
 }
-.footer__block > small{
-    font-size: .8rem;
-    display: block;
-    margin-bottom: 5%;
-}
 
-.footer__acept{
-    font-size: .8rem;
-}
-/* FOOTER CHECKBOX */
-/* The container */
-.checkbox__container {
-    display: block;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: .7rem;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-  
-  /* Hide the browser's default checkbox */
-  .checkbox__container input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-  }
-  
-  /* Create a custom checkbox */
-  .checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 25px;
-    width: 25px;
-    background-color: #eee;
-  }
-  
-  /* On mouse-over, add a grey background color */
-  .checkbox__container:hover input ~ .checkmark {
-    background-color: #ccc;
-  }
-  
-  /* When the checkbox is checked, add a blue background */
-  .checkbox__container input:checked ~ .checkmark {
-    background-color: #2196F3;
-  }
-  
-  /* Create the checkmark/indicator (hidden when not checked) */
-  .checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
-  }
-  
-  /* Show the checkmark when checked */
-  .checkbox__container input:checked ~ .checkmark:after {
-    display: block;
-  }
-  
-  /* Style the checkmark/indicator */
-  .checkbox__container .checkmark:after {
-    left: 9px;
-    top: 5px;
-    width: 5px;
-    height: 10px;
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-  }
-
-/* END FOOTER CHECKBOX */
 
 /* FOOTER BUTTON */
 .footer__btn { 
-    margin: 10px auto;
+    margin: 20px auto;
     text-decoration: none;
     display: inline-block;
     width: 200px;
